# airtel-chatbot

./: .gitignore
backend/: .example  DEPLOYMENT.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_PERFORMANCE.md  app.py  env.example  pyproject.toml  requirements.txt  run_api.py  start_server.py  test_local.py  test_performance.py  test_preloading.py  vercel.json
backend/src/: cli.py  test_agent.py
backend/src/agent/: agent_state.py  rag_agent.py
backend/src/api/: main.py  requirements.txt
backend/src/config/: settings.py
backend/src/memory/: checkpointer.py  session_manager.py
backend/src/prompts/: system_prompt.py  system_prompt2.py  system_prompt3.py
backend/src/rag/: cache.py  document_processor.py  embeddings.py  static_document.txt  static_document2.txt  vector_store.py
backend/src/tools/: base_tool.py  placeholder_tools.py  rag_tool.py
docs/: README.md  getting-started.md
docs/configuration/: performance.md  streaming.md  timeouts.md
docs/deployment/: local.md  vercel.md
docs/features/: memory.md  preloading.md  rag.md
docs/troubleshooting/: common-issues.md  debugging.md
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat/[sessionId]/: route.ts
frontend/components/chat/: chat.tsx
frontend/components/header/: header.tsx
frontend/components/theme/: theme-toggle.tsx
frontend/components/title/: airtel-logo.tsx  svg.tsx  title-skeleton.tsx  title.tsx
frontend/lib/: utils.ts
