[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    langgraph>=0.2.0
    langchain>=0.3.0
    langchain-google-genai>=2.0.0
    faiss-cpu>=1.7.4
    fastapi>=0.104.0
    uvicorn>=0.24.0
    python-multipart>=0.0.6
    pydantic>=2.0.0
]
